AWE/src/objects/AdvanceWorkflowConf__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores the Batch size for scheduled job and interval time for the schedule job</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <description>Number of records to be processed per  batch</description>
        <label>Processing Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Time__c</fullName>
        <inlineHelpText>Delay Time to be entered in minutes</inlineHelpText>
        <label>Delay Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Addresses__c</fullName>
        <label>Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_for_Async_Invocation__c</fullName>
        <description>Numbers of records to detect if AWE is called in async mode Threshold_for_Async_invocation</description>
        <label>Threshold for Async Invocation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Advance Workflow Configuration</label>
</CustomObject>